[build-system]
requires = [ "hatch-vcs", "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "MAPPy"
version = "0.0.1"

maintainers = [
    { name = "Roy Pollak", email= "roy.pollak@weizmann.ac.il"}
]

authors = [
  { name="Roy Pollak", email="roy.pollak@weizmann.ac.il" },
]

description = "Proteomic Analysis in Python"

readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"